# python-project-52

./: .env  .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml
.github/workflows/: project-check.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/label/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/label/migrations/: 0001_initial.py  0002_alter_label_name.py  0002_rename_timestamp_label_created_at_remove_label_tasks.py
task_manager/status/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py  0002_alter_status_name.py  0002_rename_timestamp_status_created_at_and_more.py
task_manager/task/: apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_author_alter_task_executor_and_more.py  0004_alter_task_description_alter_task_executor_and_more.py
task_manager/tasks/: models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_updated_at.py
task_manager/templates/: base.html  footer.html  index.html  logged_navbar.html  navigation.html
task_manager/templates/components/: logged_navbar.html  navigation.html
task_manager/user/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
(+27 files in other folders)
